// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots FilterForm Create form 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <form
    className="sc-ktHwxA gBklOe"
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="sc-bZQynM bOrPFB"
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "maxWidth": "100%",
            "paddingBottom": "30px",
            "position": "relative",
          }
        }
      >
        <label
          htmlFor="name"
          style={
            Object {
              "border": "none",
              "borderTop": "2px solid #2F2F36",
              "color": "#71737e",
              "display": "block",
              "fontSize": "14px",
              "outline": "none",
              "paddingTop": "8px",
              "width": "100%",
            }
          }
        >
          <span>
            Filter Name
          </span>
        </label>
        <input
          id="name"
          name="name"
          onChange={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "color": "#FFF",
              "fontSize": "18px",
              "lineHeight": "24px",
              "outline": "none",
            }
          }
          type="text"
          value=""
        />
        <div
          style={
            Object {
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <div
            className="sc-gzVnrw bHgYaJ"
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "30px",
                  "width": "30px",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-fYxtnH bBxIKO"
    >
      <label
        id="fieldProjectStatusLabel"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        <span>
          Field
        </span>
      </label>
      <input
        id="field"
        name="field"
        type="hidden"
        value="field"
      />
      <div
        className="sc-tilXH eucPMw"
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "30px",
              "width": "30px",
            }
          }
          viewBox="0 0 30 30"
        >
          <path
            d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <div
        style={
          Object {
            "color": "#FFF",
            "display": "flex",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "display": "flex",
                "height": "30px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "cursor": "pointer",
                  "display": "flex",
                  "height": "30px",
                }
              }
            >
              field
            </div>
          </div>
          <div
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "display": "none",
                "flexDirection": "column",
                "left": "0",
                "maxHeight": "175px",
                "overflow": "hidden",
                "position": "absolute",
                "top": "46px",
                "width": "100%",
                "zIndex": 2,
              }
            }
          >
            <div
              id="select-item-0"
              onClick={[Function]}
              style={
                Object {
                  "borderTop": "none",
                  "cursor": "pointer",
                  "display": "block",
                  "padding": "7px",
                }
              }
            >
              field
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-fYxtnH bBxIKO"
    >
      <label
        id="fieldProjectStatusLabel"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        <span>
          Filter Type
        </span>
      </label>
      <input
        id="filterType"
        name="filterType"
        type="hidden"
        value="checkbox"
      />
      <div
        className="sc-tilXH eucPMw"
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "30px",
              "width": "30px",
            }
          }
          viewBox="0 0 30 30"
        >
          <path
            d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <div
        style={
          Object {
            "color": "#FFF",
            "display": "flex",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "display": "flex",
                "height": "30px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "cursor": "pointer",
                  "display": "flex",
                  "height": "30px",
                }
              }
            >
              checkbox
            </div>
          </div>
          <div
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "display": "none",
                "flexDirection": "column",
                "left": "0",
                "maxHeight": "175px",
                "overflow": "hidden",
                "position": "absolute",
                "top": "46px",
                "width": "100%",
                "zIndex": 2,
              }
            }
          >
            <div
              id="select-item-0"
              onClick={[Function]}
              style={
                Object {
                  "borderTop": "none",
                  "cursor": "pointer",
                  "display": "block",
                  "padding": "7px",
                }
              }
            >
              checkbox
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-hEsumM ijWfjS"
    >
      <div
        className="sc-bZQynM bOrPFB"
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="fieldType"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            <span>
              Field Type
            </span>
          </label>
          <input
            disabled={true}
            id="fieldType"
            name="fieldType"
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontSize": "18px",
                "lineHeight": "24px",
                "outline": "none",
              }
            }
            type="text"
            value="string"
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
      </div>
      <div
        className="sc-bZQynM bOrPFB"
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="unique"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            <span>
              Unique items
            </span>
          </label>
          <input
            disabled={true}
            id="unique"
            name="unique"
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontSize": "18px",
                "lineHeight": "24px",
                "outline": "none",
              }
            }
            type="text"
            value="1"
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="sc-iwsKbI eQdjUy"
    >
      <div
        className="sc-gqjmRU fIKSOC"
      >
        <div
          className="sc-gZMcBi jSdIIC"
        >
          <button
            className="sc-VigVT iGqnRu"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
              }
            }
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            className="sc-VigVT iGqnRu"
            disabled={true}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#71737e",
                "cursor": "default",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
              }
            }
            type="submit"
          >
            <span>
              Save
            </span>
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Storyshots FilterForm Edit form 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <form
    className="sc-ktHwxA gBklOe"
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="sc-bZQynM bOrPFB"
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "maxWidth": "100%",
            "paddingBottom": "30px",
            "position": "relative",
          }
        }
      >
        <label
          htmlFor="name"
          style={
            Object {
              "border": "none",
              "borderTop": "2px solid #2F2F36",
              "color": "#71737e",
              "display": "block",
              "fontSize": "14px",
              "outline": "none",
              "paddingTop": "8px",
              "width": "100%",
            }
          }
        >
          <span>
            Filter Name
          </span>
        </label>
        <input
          id="name"
          name="name"
          onChange={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "color": "#FFF",
              "fontSize": "18px",
              "lineHeight": "24px",
              "outline": "none",
            }
          }
          type="text"
          value="name"
        />
        <div
          style={
            Object {
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <div
            className="sc-gzVnrw bHgYaJ"
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "30px",
                  "width": "30px",
                }
              }
              viewBox="0 0 30 30"
            >
              <path
                d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-fYxtnH bBxIKO"
    >
      <label
        id="fieldProjectStatusLabel"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        <span>
          Field
        </span>
      </label>
      <input
        id="field"
        name="field"
        type="hidden"
        value="field"
      />
      <div
        className="sc-tilXH eucPMw"
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "30px",
              "width": "30px",
            }
          }
          viewBox="0 0 30 30"
        >
          <path
            d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <div
        style={
          Object {
            "color": "#FFF",
            "display": "flex",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "display": "flex",
                "height": "30px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "cursor": "pointer",
                  "display": "flex",
                  "height": "30px",
                }
              }
            >
              field
            </div>
          </div>
          <div
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "display": "none",
                "flexDirection": "column",
                "left": "0",
                "maxHeight": "175px",
                "overflow": "hidden",
                "position": "absolute",
                "top": "46px",
                "width": "100%",
                "zIndex": 2,
              }
            }
          >
            <div
              id="select-item-0"
              onClick={[Function]}
              style={
                Object {
                  "borderTop": "none",
                  "cursor": "pointer",
                  "display": "block",
                  "padding": "7px",
                }
              }
            >
              field
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-fYxtnH bBxIKO"
    >
      <label
        id="fieldProjectStatusLabel"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        <span>
          Filter Type
        </span>
      </label>
      <input
        id="filterType"
        name="filterType"
        type="hidden"
        value="checkbox"
      />
      <div
        className="sc-tilXH eucPMw"
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "30px",
              "width": "30px",
            }
          }
          viewBox="0 0 30 30"
        >
          <path
            d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <div
        style={
          Object {
            "color": "#FFF",
            "display": "flex",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "display": "flex",
                "height": "30px",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "cursor": "pointer",
                  "display": "flex",
                  "height": "30px",
                }
              }
            >
              checkbox
            </div>
          </div>
          <div
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "display": "none",
                "flexDirection": "column",
                "left": "0",
                "maxHeight": "175px",
                "overflow": "hidden",
                "position": "absolute",
                "top": "46px",
                "width": "100%",
                "zIndex": 2,
              }
            }
          >
            <div
              id="select-item-0"
              onClick={[Function]}
              style={
                Object {
                  "borderTop": "none",
                  "cursor": "pointer",
                  "display": "block",
                  "padding": "7px",
                }
              }
            >
              checkbox
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-hEsumM ijWfjS"
    >
      <div
        className="sc-bZQynM bOrPFB"
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="fieldType"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            <span>
              Field Type
            </span>
          </label>
          <input
            disabled={true}
            id="fieldType"
            name="fieldType"
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontSize": "18px",
                "lineHeight": "24px",
                "outline": "none",
              }
            }
            type="text"
            value="string"
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
      </div>
      <div
        className="sc-bZQynM bOrPFB"
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="unique"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            <span>
              Unique items
            </span>
          </label>
          <input
            disabled={true}
            id="unique"
            name="unique"
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontSize": "18px",
                "lineHeight": "24px",
                "outline": "none",
              }
            }
            type="text"
            value="1"
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="sc-iwsKbI eQdjUy"
    >
      <div
        className="sc-gqjmRU fIKSOC"
      >
        <div
          className="sc-gZMcBi jSdIIC"
        >
          <button
            className="sc-VigVT iGqnRu"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
              }
            }
            type="button"
          >
            <span>
              Delete
            </span>
          </button>
          <button
            className="sc-VigVT iGqnRu"
            disabled={true}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#71737e",
                "cursor": "default",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
              }
            }
            type="submit"
          >
            <span>
              Save
            </span>
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;
